# hal_rts5817

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README_CN.md
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: CMakeLists.txt  Kconfig
drivers/entropy/: CMakeLists.txt  Kconfig
drivers/flash/: CMakeLists.txt  Kconfig
drivers/gpio/: CMakeLists.txt  Kconfig
drivers/pinctrl/: CMakeLists.txt  Kconfig
drivers/regulator/: CMakeLists.txt  Kconfig
drivers/reset/: CMakeLists.txt  Kconfig
drivers/spi/: CMakeLists.txt  Kconfig
drivers/usb/: CMakeLists.txt  Kconfig
drivers/usb/udc/: CMakeLists.txt  Kconfig
drivers/watchdog/: CMakeLists.txt  Kconfig
zephyr/: module.yml
